2006-10-28  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.27

2006-10-23  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): close parenthesis.
	(Preferably): typo.

2006-10-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): typo.

2006-10-22  John Mandereau  <john.mandereau@free.fr>

	* fr/about/pubs.html: update translation (add erik's thesis).

2006-10-21  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.26
	(href): announce thesis availability.

2006-10-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): fix date. 

	* site/announce-v2.10.html: new file.

	* site/about/pubs.html (href): add erik's thesis.

2006-10-18  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.25

	* site/install/devel.ihtml: add x86_64

2006-10-15  John Mandereau  <john.mandereau@free.fr>

	* site/install/using.html, fr/install/using.html,
	nl/install/using.html: fix mailto:lilypond-user@gnu.org link.

	* fr/switch/advantages.html: update translation.

	* fr/index.html, fr/about/faq.html, fr/switch/tour.html,
	fr/switch/howto.html, fr/switch/new-notation.html: fix
	"Translation of CVS Revision" number (translation was already
	updated).

2006-10-15  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.24

2006-10-12  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): 2.9.23

2006-10-09  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): 2.9.22

2006-10-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site, nl, fr *html: Change occurrences of @DOC@/v2.[468] to
	@DOC@/latest, @DOC@/v2.[579] to @DOC@/latest.  Add `stable' link
	to lilypond.org website, update `latest' link to point to 2.9.
	
2006-10-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): 2.9.20

2006-09-17  John Mandereau  <john.mandereau@free.fr>

	* fr/index.html: remove sponsoring section.
