@@ -61,3 +61,13 @@ That's not all, check out
    </a>
 </pre>
 for all changes.
+
+<hr>
+
+<h1>Thanks!</h1>
+
+<h2>Contributors</h2>
+<h2>Sponsors</h2>
+<h2>Documentation helpers</h2>
+<h2>Bughunters</h2>
+
