@@ -1,3 +1,7 @@
+2006-10-31  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* site/announce-v2.10.html: update
+
 2006-10-28  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* site/news.ihtml (href): 2.9.27
